Changement des noms

--- a/rapport.Rmd
+++ b/rapport.Rmd
@@ -3,19 +3,19 @@ title: Short Paper
 author:
   - name: Nicolas Beaudoin
     email: bean1710@usherbrooke.ca
-    affiliation: Universite_minuscule de Sherbrooke
+    affiliation: Université de Sherbrooke
     correspondingauthor: true
     footnote: 1
   - name: Camille Gagnon
     email: gagc3901@usherbrooke.ca
-    affiliation: Universite_minuscule de Sherbrooke
+    affiliation: Université de Sherbrooke
   - name: Marilou Cournoyer
     email: coum3903@userhbrooke.ca
-    affiliation: Universite_minuscule de Sherbrooke
+    affiliation: Université de Sherbrooke
     footnote: 2
   - name: Francis Boily 
     email: boif2411@usherbrooke.ca
-    affiliation: Universite_minuscule de Sherbrooke
+    affiliation: Université de Sherbrooke
     footnote: 2
 address:
   - code: Département des sciences
