--- a/rapport.Rmd
+++ b/rapport.Rmd
@@ -18,7 +18,7 @@ abstract: |
 
 date: "`r Sys.Date()`"
 classoption: preprint, 3p, authoryear
-bibliography: mybibfile.bib
+bibliography: Sources_rapport.bib
 linenumbers: false
 numbersections: false
 # Use a CSL with `citation_package = "default"`
